[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-context-tracker"
version = "1.0.0"
description = "macOS menu bar widget that tracks Claude context window fill with research-calibrated context rot warnings"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Paul Thomas", email = "paullytree@gmail.com"}
]
keywords = ["claude", "anthropic", "context-window", "context-rot", "llm", "macos", "menu-bar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "rumps>=0.4.0",
    "pynput>=1.7.6",
]
